--- a/preorder/index.html
+++ b/preorder/index.html
@@ -12,8 +12,8 @@
 </style>
 </head>
 <body>
-    <img src="./img/BGI.png" style="width: 100%;position: fixed;">
-    <a href="select.html"><img src="./img/preorder.png" id="preorder" style="position: fixed;width: 54%;margin-left: 23%;"></a>
+    <img src="./img/BGI.png" style="width: 100%;position: fixed;z-index: -1">
+    <a href="select.html"><img src="./img/preorder.png" id="preorder" style="position: fixed;width: 54%;margin-left: 23%;z-index: 1000"></a>
 </body>
 <script type="text/javascript">
     window.onload=function (argument) {
