--- a/preorder/select.html
+++ b/preorder/select.html
@@ -25,7 +25,7 @@
         color: #000;
     }
     @media screen and (min-width: 400px) {
-        ul{
+        a{
             font-size: 25px;
         }
     } 
@@ -35,34 +35,42 @@
     <img src="./img/BGI.png" style="width: 100%;position: fixed;">
     <img id="tribgi" src="./img/tribgi.png" style="position: fixed;width:40%;margin-left: 30%;">
     <div id="preorder" style="position: fixed; width: 40%;margin-left: 30%;">
-        <ul style="float: left;text-align: left;"><a href="price.html">证件照</a></ul>
-        <ul style="float: right;text-align: right;"><a href="price.html">写真照</a></ul>
-        <ul style="float: left;text-align: left;"><a href="price.html">结婚照</a></ul>
-        <ul style="float: right;text-align: right;"><a href="price.html">宠物照</a></ul>
-        <ul style="float: left;text-align: left;"><a href="price.html">毕业照</a></ul>
+        <ul style="float: left;text-align: left;"><a onclick="fill('p1')">证件照</a></ul>
+        <ul style="float: right;text-align: right;"><a onclick="fill('p2')">写真照</a></ul>
+        <ul style="float: left;text-align: left;"><a onclick="fill('p3')">结婚照</a></ul>
+        <ul style="float: right;text-align: right;"><a onclick="fill('p4')">宠物照</a></ul>
+        <ul style="float: left;text-align: left;"><a onclick="fill('p5')">毕业照</a></ul>
     </div>
+    <form id="myform" onsubmit="" action="" enctype="" method="post" style="display: none;">
+        <input id="subcont" name=""></input>
+    </form>
 </body>
 <script type="text/javascript">
     window.onload=function(){
-        pos("tribgi");
         th=document.getElementById("tribgi").offsetHeight;
         for (var i = 0; i < 5; i++) {
             document.getElementsByTagName("ul")[i].style.lineHeight=th/6+"px";
         } 
+        pos("tribgi");
         pos("preorder");
     } ;
     function pos(obj) {
-    // body...    
-    if (window.innerHeight){
-        winHeight = window.innerHeight;
+        if (window.innerHeight){
+            winHeight = window.innerHeight;
+        }
+        else if ((document.body) && (document.body.clientHeight)){
+            winHeight = document.body.clientHeight;
+        }
+        bh=winHeight/2;
+        bh_=document.getElementById(obj).offsetHeight/2;
+        document.getElementById(obj).style.marginTop=bh-bh_+"px";    
     }
-    else if ((document.body) && (document.body.clientHeight)){
-        winHeight = document.body.clientHeight;
+    function submit(obj) {
+        document.getElementById("myform").submit();
+        window.location.href = 'price.html';
     }
-    bh=winHeight/2;
-    bh_=document.getElementById(obj).offsetHeight/2;
-    document.getElementById(obj).style.marginTop=bh-bh_+"px";    
-}
-
+    function fill(obj) {
+        document.getElementById("subcont").value=obj;
+    }
 </script>
 </html>
