--- a/preorder/select.html
+++ b/preorder/select.html
@@ -26,7 +26,7 @@
     }
     @media screen and (min-width: 400px) {
         a{
-            font-size: 25px;
+            /*font-size: 25px;*/
         }
     } 
 </style>
