--- a/preorder/price.html
+++ b/preorder/price.html
@@ -9,8 +9,8 @@
         /*background-color: #FFD900;*/
         padding: 0;
         margin: 0;
-        /*background-image:   url('./img/price.png');*/
-        /*background-size: 100%;*/
+        background-image: url('./img/BGI2.png');
+        background-size: 100%;
         background-repeat: no-repeat;
         font-family: "微软雅黑",Arial,Helvetica,sans-serif;
         font-weight: bold;
