--- a/preorder/selecttime.html
+++ b/preorder/selecttime.html
@@ -10,6 +10,9 @@
     body{
         padding: 0;
         margin: 0;
+        background-image: url('./img/BGI2.png');
+        background-size: 100%;
+        background-repeat: no-repeat;
         font-family: "微软雅黑",Arial,Helvetica,sans-serif;
         font-weight: bold;
     }
@@ -46,6 +49,9 @@
     }
     p{
         text-align: right;
+        display: inline-block;
+        margin-top: 0px;
+        float: right;
     }
     ul,li{
         list-style: none;
