--- a/preorder/selecttime.html
+++ b/preorder/selecttime.html
@@ -52,6 +52,7 @@
         display: inline-block;
         margin-top: 0px;
         float: right;
+        font-size: 12px;
     }
     ul,li{
         list-style: none;
@@ -123,7 +124,7 @@
             <input class="time-btn" type="button" name="sex" value="20:00" />
         </ul> 
     </div>
-    <img src="./img/nextstep.png" id="preorder" style="position: relative;">
+    <a href="pay.html"><img src="./img/nextstep.png" id="preorder"></a>
 </body>
 <script type="text/javascript">
     calendar.show({ id: Text1 });
