--- a/preorder/detail.html
+++ b/preorder/detail.html
@@ -3,6 +3,8 @@
 <title>预约拍摄</title>
 <!-- <link rel="stylesheet" href="./css/style.css"> -->
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/hDate.js"></script>
 <style type="text/css">
     body{
         padding: 0;
