--- a/preorder/selecttime.html
+++ b/preorder/selecttime.html
@@ -89,40 +89,42 @@
 </style>
 </head>
 <body>
-    <img src="./img/phototime.png" style="position: absolute;left: 0px;top: 20px;width: 100%">
-    <div>
-        <input id="Text1" type="text" style="display: none;" />
-    </div>
-    <div class="main" id="_main">
-        <ul><input class="time-btn" type="button" name="sex" value="10:00" />
-            <input class="time-btn" type="button" name="sex" value="10:30" />
-            <input class="time-btn" type="button" name="sex" value="11:00" />
-            <input class="time-btn" type="button" name="sex" value="11:30" />
-        </ul>
-        <ul>
-            <input class="time-btn" type="button" name="sex" value="12:00" />
-            <input class="time-btn" type="button" name="sex" value="12:30" />            
-        </ul>    
-    </div>
-    <div class="main2">
-        <ul><input class="time-btn" type="button" name="sex" value="13:00" />
-            <input class="time-btn" type="button" name="sex" value="13:30" />
-            <input class="time-btn" type="button" name="sex" value="14:00" />
-            <input class="time-btn" type="button" name="sex" value="14:30" />
-            <input class="time-btn" type="button" name="sex" value="15:00" />
-        </ul>
-        <ul><input class="time-btn" type="button" name="sex" value="15:30" />
-            <input class="time-btn" type="button" name="sex" value="16:00" />
-            <input class="time-btn" type="button" name="sex" value="16:30" />
-            <input class="time-btn" type="button" name="sex" value="17:00" />
-            <input class="time-btn" type="button" name="sex" value="17:30" />
-        </ul>
-        <ul><input class="time-btn" type="button" name="sex" value="18:00" />
-            <input class="time-btn" type="button" name="sex" value="18:30" />
-            <input class="time-btn" type="button" name="sex" value="19:00" />
-            <input class="time-btn" type="button" name="sex" value="19:30" />
-            <input class="time-btn" type="button" name="sex" value="20:00" />
-        </ul> 
+    <div id="contant">
+        <img src="./img/phototime.png" style="position: absolute;left: 0px;top: 20px;width: 100%">
+        <div>
+            <input id="Text1" type="text" style="display: none;" />
+        </div>
+        <div class="main" id="_main">
+            <ul><input class="time-btn" type="button" name="sex" value="10:00" />
+                <input class="time-btn" type="button" name="sex" value="10:30" />
+                <input class="time-btn" type="button" name="sex" value="11:00" />
+                <input class="time-btn" type="button" name="sex" value="11:30" />
+            </ul>
+            <ul>
+                <input class="time-btn" type="button" name="sex" value="12:00" />
+                <input class="time-btn" type="button" name="sex" value="12:30" />            
+            </ul>    
+        </div>
+        <div class="main2">
+            <ul><input class="time-btn" type="button" name="sex" value="13:00" />
+                <input class="time-btn" type="button" name="sex" value="13:30" />
+                <input class="time-btn" type="button" name="sex" value="14:00" />
+                <input class="time-btn" type="button" name="sex" value="14:30" />
+                <input class="time-btn" type="button" name="sex" value="15:00" />
+            </ul>
+            <ul><input class="time-btn" type="button" name="sex" value="15:30" />
+                <input class="time-btn" type="button" name="sex" value="16:00" />
+                <input class="time-btn" type="button" name="sex" value="16:30" />
+                <input class="time-btn" type="button" name="sex" value="17:00" />
+                <input class="time-btn" type="button" name="sex" value="17:30" />
+            </ul>
+            <ul><input class="time-btn" type="button" name="sex" value="18:00" />
+                <input class="time-btn" type="button" name="sex" value="18:30" />
+                <input class="time-btn" type="button" name="sex" value="19:00" />
+                <input class="time-btn" type="button" name="sex" value="19:30" />
+                <input class="time-btn" type="button" name="sex" value="20:00" />
+            </ul> 
+        </div>
     </div>
     <a href="pay.html"><img src="./img/nextstep.png" id="preorder"></a>
 </body>
