--- a/preorder/price.html
+++ b/preorder/price.html
@@ -98,176 +98,175 @@
 </style>
 </head>
 <body>
-    <img src="./img/photocontent.png" style="margin-top:20px;margin-bottom: 20px; width: 100%">
-    <div class="main" style="">
-        <p></p><p></p><p></p><p></p>
-        <ul><li>内容</li><li>人数</li><li>价格</li></ul>
-        <ul>
-            <li>证件照</li>
-            <li>
-                <script type="text/javascript">
-                    $(function () {
-                        var t = $("#text_box1");
-                        $("#add1").click(function () {
-                            t.val(parseInt(t.val()) + 1)
-                            setTotal(); GetCount();tsetTotal();
+    <div id="contant2">
+        <img src="./img/photocontent.png" style="margin-top:20px;margin-bottom: 20px; width: 100%">
+        <div class="main" style="">
+            <p></p><p></p><p></p><p></p>
+            <ul><li>内容</li><li>人数</li><li>价格</li></ul>
+            <ul>
+                <li>证件照</li>
+                <li>
+                    <script type="text/javascript">
+                        $(function () {
+                            var t = $("#text_box1");
+                            $("#add1").click(function () {
+                                t.val(parseInt(t.val()) + 1)
+                                setTotal(); GetCount();tsetTotal();
+                            })
+                            $("#min1").click(function () {
+                                if (parseInt(t.val())>=1) {
+                                    t.val(parseInt(t.val()) - 1)
+                                    setTotal(); GetCount();tsetTotal();
+                                }
+                            })
+                            function setTotal() {
+                                pri1=(t.val()) * 88;
+                            }
+                            tsetTotal();
                         })
-                        $("#min1").click(function () {
-                            if (parseInt(t.val())>=1) {
+                    </script>                
+                    <input id="min1" name=""  class="cbtn" style=" width:20px; height:18px;" type="button" value="-" />
+                    <input id="text_box1" name="" type="text" value="0" class="number" style=" width:20px; text-align:center; " />
+                    <input id="add1" name="" class="cbtn" style=" width:20px; height:18px;" type="button" value="+" />
+                </li><li id="total1" >￥108</li>
+            </ul>
+            <ul><li>写真照</li>
+                <li>
+                    <script type="text/javascript">
+                        $(function () {
+                            var t = $("#text_box2");
+                            $("#add2").click(function () {
+                                t.val(parseInt(t.val()) + 1)
+                                setTotal(); GetCount();tsetTotal();
+                            })
+                            $("#min2").click(function () {
+                                if (parseInt(t.val())>=1) {
+                                    t.val(parseInt(t.val()) - 1)
+                                    setTotal(); GetCount();tsetTotal();
+                                }
+                            })
+                            function setTotal() {
+                                pri2=(t.val()) * 88;
+                            }
+                            tsetTotal();
+                        })
+                    </script>                              
+                    <input id="min2" name=""  class="cbtn" style=" width:20px; height:18px;" type="button" value="-" />
+                    <input id="text_box2" name="" type="text" value="0" class="number" style=" width:20px; text-align:center; " />
+                    <input id="add2" name="" class="cbtn" style=" width:20px; height:18px;" type="button" value="+" />
+                </li><li id="total2" >￥88</li>
+            </ul>
+            <ul><li>结婚照</li>
+                <li>
+                    <script type="text/javascript">
+                        $(function () {
+                            var t = $("#text_box3");
+                            $("#add3").click(function () {
+                                t.val(parseInt(t.val()) + 1)
+                                setTotal(); GetCount();tsetTotal();
+                            })
+                            $("#min3").click(function () {
+                               if (parseInt(t.val())>=1) {
                                 t.val(parseInt(t.val()) - 1)
                                 setTotal(); GetCount();tsetTotal();
                             }
                         })
-                        function setTotal() {
-                            pri1=(t.val()) * 88;
-                            // $("#total1").html("￥"+pri1);
-                        }
-                        tsetTotal();
-                    })
-                </script>                
-                <input id="min1" name=""  class="cbtn" style=" width:20px; height:18px;" type="button" value="-" />
-                <input id="text_box1" name="" type="text" value="0" class="number" style=" width:20px; text-align:center; " />
-                <input id="add1" name="" class="cbtn" style=" width:20px; height:18px;" type="button" value="+" />
-            </li><li id="total1" >￥108</li>
-        </ul>
-        <ul><li>写真照</li>
-            <li>
-                <script type="text/javascript">
-                    $(function () {
-                        var t = $("#text_box2");
-                        $("#add2").click(function () {
-                            t.val(parseInt(t.val()) + 1)
-                            setTotal(); GetCount();tsetTotal();
+                            function setTotal() {
+                                pri3=(t.val()) * 168;
+                            }
+                            tsetTotal();
                         })
-                        $("#min2").click(function () {
-                            if (parseInt(t.val())>=1) {
+                    </script>                              
+                    <input id="min3" name=""  class="cbtn" style=" width:20px; height:18px;" type="button" value="-" />
+                    <input id="text_box3" name="" type="text" value="0" class="number" style=" width:20px; text-align:center; " />
+                    <input id="add3" name="" class="cbtn" style=" width:20px; height:18px;" type="button" value="+" />
+                </li><li id="total3" >￥198</li>
+            </ul>
+            <ul><li>宠物照</li>
+                <li>
+                    <script type="text/javascript">
+                        $(function () {
+                            var t = $("#text_box4");
+                            $("#add4").click(function () {
+                                t.val(parseInt(t.val()) + 1)
+                                setTotal(); GetCount();tsetTotal();
+                            })
+                            $("#min4").click(function () {
+                               if (parseInt(t.val())>=1) {
                                 t.val(parseInt(t.val()) - 1)
                                 setTotal(); GetCount();tsetTotal();
                             }
                         })
-                        function setTotal() {
-                            pri2=(t.val()) * 88;
-                            // $("#total2").html("￥"+pri2);
-                        }
-                        tsetTotal();
-                    })
-                </script>                              
-                <input id="min2" name=""  class="cbtn" style=" width:20px; height:18px;" type="button" value="-" />
-                <input id="text_box2" name="" type="text" value="0" class="number" style=" width:20px; text-align:center; " />
-                <input id="add2" name="" class="cbtn" style=" width:20px; height:18px;" type="button" value="+" />
-            </li><li id="total2" >￥88</li>
-        </ul>
-        <ul><li>结婚照</li>
-            <li>
-                <script type="text/javascript">
-                    $(function () {
-                        var t = $("#text_box3");
-                        $("#add3").click(function () {
-                            t.val(parseInt(t.val()) + 1)
-                            setTotal(); GetCount();tsetTotal();
+                            function setTotal() {
+                                pri4=(t.val()) * 128;
+                            }
+                            tsetTotal();
                         })
-                        $("#min3").click(function () {
-                         if (parseInt(t.val())>=1) {
-                            t.val(parseInt(t.val()) - 1)
-                            setTotal(); GetCount();tsetTotal();
-                        }
-                    })
-                        function setTotal() {
-                            pri3=(t.val()) * 168;
-                            // $("#total3").html("￥"+pri3);
-                        }
-                        tsetTotal();
-                    })
-                </script>                              
-                <input id="min3" name=""  class="cbtn" style=" width:20px; height:18px;" type="button" value="-" />
-                <input id="text_box3" name="" type="text" value="0" class="number" style=" width:20px; text-align:center; " />
-                <input id="add3" name="" class="cbtn" style=" width:20px; height:18px;" type="button" value="+" />
-            </li><li id="total3" >￥198</li>
-        </ul>
-        <ul><li>宠物照</li>
-            <li>
-                <script type="text/javascript">
-                    $(function () {
-                        var t = $("#text_box4");
-                        $("#add4").click(function () {
-                            t.val(parseInt(t.val()) + 1)
-                            setTotal(); GetCount();tsetTotal();
+                    </script>                              
+                    <input id="min4" name="" class="cbtn"  style=" width:20px; height:18px;" type="button" value="-" />
+                    <input id="text_box4" name="" type="text" value="0" class="number" style=" width:20px; text-align:center; " />
+                    <input id="add4" name="" class="cbtn" style=" width:20px; height:18px;" type="button" value="+" />
+                </li><li id="total4" >￥148</li>
+            </ul>
+            <ul style="margin-bottom: 5px;"><li>毕业照</li>
+                <li>
+                    <script type="text/javascript">
+                        $(function () {
+                            var t = $("#text_box5");
+                            $("#add5").click(function () {
+                                t.val(parseInt(t.val()) + 1)
+                                setTotal(); GetCount();tsetTotal();
+                            })
+                            $("#min5").click(function () {
+                               if (parseInt(t.val())>=1) {
+                                t.val(parseInt(t.val()) - 1)
+                                setTotal(); GetCount();tsetTotal();
+                            }
                         })
-                        $("#min4").click(function () {
-                         if (parseInt(t.val())>=1) {
-                            t.val(parseInt(t.val()) - 1)
-                            setTotal(); GetCount();tsetTotal();
-                        }
-                    })
-                        function setTotal() {
-                            pri4=(t.val()) * 128;
-                            // $("#total4").html("￥"+pri4);
-                        }
-                        tsetTotal();
-                    })
-                </script>                              
-                <input id="min4" name="" class="cbtn"  style=" width:20px; height:18px;" type="button" value="-" />
-                <input id="text_box4" name="" type="text" value="0" class="number" style=" width:20px; text-align:center; " />
-                <input id="add4" name="" class="cbtn" style=" width:20px; height:18px;" type="button" value="+" />
-            </li><li id="total4" >￥148</li>
-        </ul>
-        <ul style="margin-bottom: 5px;"><li>毕业照</li>
-            <li>
-                <script type="text/javascript">
-                    $(function () {
-                        var t = $("#text_box5");
-                        $("#add5").click(function () {
-                            t.val(parseInt(t.val()) + 1)
-                            setTotal(); GetCount();tsetTotal();
+                            function setTotal() {
+                                pri5=(t.val()) * 128;
+                            }
+                            tsetTotal();
                         })
-                        $("#min5").click(function () {
-                         if (parseInt(t.val())>=1) {
-                            t.val(parseInt(t.val()) - 1)
-                            setTotal(); GetCount();tsetTotal();
-                        }
-                    })
-                        function setTotal() {
-                            pri5=(t.val()) * 128;
-                            // $("#total5").html("￥"+pri5);
-                        }
-                        tsetTotal();
-                    })
-                </script>                              
-                <input id="min5" name=""  class="cbtn" style=" width:20px; height:18px;" type="button" value="-" />
-                <input id="text_box5" name="" type="text" value="0" class="number" style=" width:20px; text-align:center; " />
-                <input id="add5" name="" class="cbtn" style=" width:20px; height:18px;" type="button" value="+" />
-            </li><li id="total5" >￥148</li>
-        </ul>
-        <div class="calpri">
-            <ul style="line-height: 18px;"><li style="width: 66%">线上预约立减</li><li id="zong3" style="text-align: center;font-weight: bold;"></li></ul>
-            <ul style="line-height: 18px;border-bottom: 1px solid;"> <li style="width: 66%">组合优惠</li><li id="zong2" style="text-align: center;font-weight: bold;">-￥0</li></ul>
-            <ul style="line-height: 18px;"><li style="width: 66%">应付金额</li><li id="zong1" style="text-align: center;font-weight: bold;color: red;"></li></ul>
-        </div>
-        
-    </div>
-    <div class="main2">
-        <ul>
-            <span class="inf-pj">姓名</span>
-            <input type="text" class="inf-text" style="width: 50px;" name="username">
-            <span class="inf-pj">姓别</span> 
-            <input type="button" name="sex" class="sex-btn" value="男" />
-            <input type="button" name="sex" class="sex-btn" value="女" />
-        </ul>
-        <ul>
-            <span class="inf-pj">手机</span>
-            <input type="text" class="inf-text" style="width: 170px;" name="username">
-        </ul>  
-        <ul>
-            <span class="inf-pj">地址</span>
-            <input type="text" class="inf-text" style="width: 170px;" name="username">
-        </ul>
-    </ul>
+                    </script>                              
+                    <input id="min5" name=""  class="cbtn" style=" width:20px; height:18px;" type="button" value="-" />
+                    <input id="text_box5" name="" type="text" value="0" class="number" style=" width:20px; text-align:center; " />
+                    <input id="add5" name="" class="cbtn" style=" width:20px; height:18px;" type="button" value="+" />
+                </li><li id="total5" >￥148</li>
+            </ul>
+            <div class="calpri">
+                <ul style="line-height: 18px;"><li style="width: 66%">线上预约立减</li><li id="zong3" style="text-align: center;font-weight: bold;"></li></ul>
+                <ul style="line-height: 18px;border-bottom: 1px solid;"> <li style="width: 66%">组合优惠</li><li id="zong2" style="text-align: center;font-weight: bold;">-￥0</li></ul>
+                <ul style="line-height: 18px;"><li style="width: 66%">应付金额</li><li id="zong1" style="text-align: center;font-weight: bold;color: red;"></li></ul>
+            </div>
 
+        </div>
+        <div class="main2">
+            <ul>
+                <span class="inf-pj">姓名</span>
+                <input type="text" class="inf-text" style="width: 50px;" name="username">
+                <span class="inf-pj">姓别</span> 
+                <input type="button" name="sex" class="sex-btn" value="男" onclick="set(sex,0)" />
+                <input type="button" name="sex" class="sex-btn" value="女" onclick="set(sex,1)" />
+            </ul>
+            <ul>
+                <span class="inf-pj">手机</span>
+                <input type="text" class="inf-text" style="width: 170px;" name="username">
+            </ul>  
+            <ul>
+                <span class="inf-pj">地址</span>
+                <input type="text" class="inf-text" style="width: 170px;" name="username">
+            </ul>
+        </ul>
+
+    </div>
 </div>
-<a href="selecttime.html"><img src="./img/nextstep.png" id="preorder"></a>
+
+<a href="selecttime.html" onclick="jump()"><img src="./img/nextstep.png" id="preorder"></a>
 </body>
 <script type="text/javascript">
-    pri1=0,pri2=0,pri3=0,pri4=0,pri5=0;
+    pri1=0,pri2=0,pri3=0,pri4=0,pri5=0;sex=0;address='';
+    document.cookie="userId=320; path=/";
     function GetCount() {
         var conts = 0;
         var aa = 0;
@@ -290,5 +289,12 @@
         num_=pri1/88*108+pri2+pri3/168*198+pri4/128*148+pri5/128*148-num;
         $("#zong3").text(parseInt(num_).toFixed(2));
     }
+    function set(obj,value) {
+        
+    }
+    // function jump(argument) {
+        document.cookie.a="saddsasdsda"; 
+    // }
+
 </script>
 </html>
